--- a/package.json
+++ b/package.json
@@ -22,11 +22,24 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/facebook": "^4.7.0",
+    "@ionic-native/google-plus": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.10",
+    "cordova-android": "6.4.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "^2.1.0",
+    "cordova-plugin-googleplus": "^5.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.0.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "promise-polyfill": "^8.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -35,5 +48,24 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-facebook4": {
+        "APP_ID": "613777928980401",
+        "APP_NAME": "LoginApp"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.628665298543-cobqafgc89ue33hedmmmmmqkgojf47df"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
